--- a/src/assets/styles/helpers/_display.scss
+++ b/src/assets/styles/helpers/_display.scss
@@ -70,9 +70,9 @@
   justify-content: flex-end;
 }
 
-// .flex_justify_center {
-//   justify-content: center;
-// }
+.flex_justify_center {
+  justify-content: center;
+}
 
 // .flex_center_center {
 //   justify-content: center;
