--- a/src/app/features/homepage/components/results/results.component.scss
+++ b/src/app/features/homepage/components/results/results.component.scss
@@ -2,7 +2,7 @@
     display: block;
     background-image: url('/assets/images/bg-desktop-yellow.png');
     background-size: contain;
-    background-attachment: fixed;
+    // background-attachment: fixed;
 
     padding: 65px 1rem 1rem 1rem;
 }
@@ -43,9 +43,6 @@
         align-items: center;
         justify-content: center;
 
-        background-color: var(--green-dark-color);
-        color: var(--light-text);
-
         span {
             height: 100%;
             color: var(--dark-text);
@@ -66,56 +63,56 @@
     margin-top: 1rem;
 }
 
-.top-pagination {
+.pagination {
     display: flex;
     align-items: center;
-    justify-content: space-between;  // desk
-    flex-wrap: wrap;
     gap: 0.5rem;
 }
 
-.top-pagination__text {
+.pagination-text {
     font-weight: 700;
-}
-
-.top-pagination__butons {
-    display: flex;
-    gap: 0.3rem;
-}
-
-.buttons-pagination {
-    display: flex;
-    justify-content: center;
-    gap: 0.3rem;
 }
 
 .pagination-button {
     background-color: var(--green-dark-color);
     color: var(--light-text);
     border-radius: 30px;
+
+    min-width: auto;
+    padding: 0;
+    line-height: normal;
 }
 
 .pagination-number {
+    padding: 0.2em 0.65em;
     font-weight: 600;
 }
 
-@media (max-width: 40rem) {
-    .top-pagination {
-        justify-content: flex-end;  // mobile
-    }
+.posts {
+    margin: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
 }
 
 // Card style
+.card {
+    max-width: 62.5rem;
+}
+
 .card-body {
     display: flex;
     gap: 1rem;
 }
 
 .card-image {
-    height: 200px;
-    width: 150px;
-    // aspect-ratio: 2/3;
+    max-height: 16rem; // desk
+    width: 100%; // mobile
+    // max-height: 12rem; // mobile
+    
     object-fit: cover;
+    object-position: top;
 }
 
 .card-footer {
@@ -134,10 +131,60 @@
     > div {
         display: flex;
         align-items: center;
+        gap: 0.3rem;
     }
 }
 
-.total-docs {
+.doc-types {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+
+.doc-types-text {
+    display: flex;
+    align-items: center;
+}
+
+.tags {
+    display: block;
+    margin: 1rem 0;
+
+    .small-tag {
+        min-height: max-content;
+        margin: 0 1px;
+
+        color: var(--light-text);
+    }
+}
+
+.academic-level-tag, .subject-tag, .axis-tag{
+    color: var(--light-text);
+}
+
+.academic-level-tag {
+    background-color: var(--primary-color);
+}
+
+.subject-tag {
+    background-color: var(--warn-color);
+}
+
+.axis-tag {
+    background-color: var(--purple-color);
+}
+
+.pdf-tag {
+    background-color: var(--warn-color);
+}
+.doc-tag {
+    background-color: var(--primary-color);
+}
+.ppt-tag {
+    // TODO: Find orange color
+    background-color: var(--accent-color);
+}
+.xls-tag {
+    // TODO: Find green light color
+    background-color: var(--green-dark-color);
 }
