--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -24,12 +24,13 @@
 
 .logo {
     background-color: var(--green-dark-color);
-    padding: 0.3em 0.7em;
-
-    border-radius: 5px;
-
+    
     color: var(--light-text);
-    font-size: 1.2rem;
+    font-weight: 500;
+    border-radius: 10px;
+    font-size: clamp(1.5rem, 1.7000rem + -0.4167vw, 1.2rem);
+    
+    box-shadow: 0px 1px 3px #303030;
 }
 
 .menu {
