--- a/src/app/features/homepage/components/results/results.component.html
+++ b/src/app/features/homepage/components/results/results.component.html
@@ -40,9 +40,8 @@
     </app-rounded-select-search>
     <app-rounded-select-search
       class="filter"
-      [list]="axesList"
-      [control]="axisControl"
-      [loading]="isaxesLoading"
+      [list]="orderingList"
+      [control]="orderingControl"
       buttonText="Ordenar por"
       bgColor="var(--green-dark-color)"
       textColor="var(--light-text)"
