feat(results): Add basic search with filters

--- a/src/app/features/homepage/components/results/results.component.html
+++ b/src/app/features/homepage/components/results/results.component.html
@@ -1,8 +1,10 @@
 <!-- Query bar -->
 <div class="search-and-filters">
   <div class="searchbar">
-    <input type="text" autocomplete="off" [formControl]="searchControl" placeholder="Buscar">
-    <button *ngIf="searchControl.value" mat-icon-button aria-label="Clear" (click)="searchControl.setValue('')">
+    <!-- TODO: Add search icon -->
+    <!-- TODO: Fix focus after search -->
+    <input type="search" autocomplete="off" [formControl]="searchControl" placeholder="Buscar" (keyup.enter)="doSearch()">
+    <button *ngIf="searchControl.value" mat-icon-button aria-label="Clear" (click)="clearSearchControl()">
       <mat-icon>close</mat-icon>
     </button>
   </div>
@@ -71,139 +73,80 @@
   <!-- Posts -->
   <div class="posts">
 
-    <mat-card class="card">
-      <div class="card-body">
-        <img src="/assets/images/doc-test.jpg" alt="document-image" class="card-image" *ngIf="!isMobile">
-        <!-- <img src="/assets/images/ppt-test.jpg" alt="document-image" class="card-image" *ngIf="!isMobile"> -->
-        <div class="card-content">
-          <img src="/assets/images/doc-test.jpg" alt="document-image" class="card-image" *ngIf="isMobile">
-          <!-- <img src="/assets/images/ppt-test.jpg" alt="document-image" class="card-image" *ngIf="isMobile"> -->
-          <mat-card-subtitle>Mariela bustamante - hace 2 semanas</mat-card-subtitle>
-          <mat-card-title>Planificacion de ejemplo</mat-card-title>
-
-          <div class="doc-types">
+    <ng-container *ngFor="let post of posts">
+      <mat-card class="card">
+        <div class="card-body">
+          <img src="/assets/images/doc-test.jpg" alt="document-image" class="card-image-desktop" *ngIf="!isMobile">
+          <!-- <img src="/assets/images/ppt-test.jpg" alt="document-image" class="card-image" *ngIf="!isMobile"> -->
+          <div class="card-content">
+            <img src="/assets/images/doc-test.jpg" alt="document-image" class="card-image-mobile" *ngIf="isMobile">
+            <!-- <img src="/assets/images/ppt-test.jpg" alt="document-image" class="card-image" *ngIf="isMobile"> -->
+            <mat-card-subtitle>{{ post.user|getUsername }} - {{ post.created_at|timeAgo }}</mat-card-subtitle>
+            <mat-card-title>{{ post.title }}</mat-card-title>
+  
+            <!-- TODO: Create pipe to get ext from posts docs -->
+            <div class="doc-types">
+              <mat-chip-list class="tags">
+                <mat-chip class="small-tag pdf-tag">
+                  <span>.pdf</span>
+                </mat-chip>
+                <mat-chip class="small-tag doc-tag">
+                  <span>.docx</span>
+                </mat-chip>
+                <mat-chip class="small-tag ppt-tag">
+                  <span>.pptx</span>
+                </mat-chip>
+                <mat-chip class="small-tag xls-tag">
+                  <span>.xlsx</span>
+                </mat-chip>
+              </mat-chip-list>
+  
+              <div class="doc-types-text">
+                <mat-icon>description</mat-icon>
+                <span *ngIf="isMobile">{{ (post.suporting_material|stringToArray).length + 1 }}</span>
+                <span *ngIf="!isMobile">{{ (post.suporting_material|stringToArray).length + 1 }} Documentos</span>
+              </div>
+            </div>
+  
+            <!-- TODO: Check how it looks if does not have description -->
+            <div>{{ post.description }}</div>
+            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio omnis doloremque reprehenderit modi odio quam, illo officiis deserunt, sapiente vel cum labore deleniti minima? Rem ducimus nostrum reprehenderit odio veniam.</div>
+  
             <mat-chip-list class="tags">
-              <mat-chip class="small-tag pdf-tag">
-                <span>.pdf</span>
+              <mat-chip class="academic-level-tag">
+                <span *ngIf="!isMobile">Nivel académico: </span>
+                <span>{{ post.academic_level.name }}</span>
               </mat-chip>
-              <mat-chip class="small-tag doc-tag">
-                <span>.docx</span>
+              <mat-chip class="subject-tag">
+                <span *ngIf="!isMobile">Asignatura: </span>
+                <span>{{ post.axis.subject.name }}</span>
               </mat-chip>
-              <mat-chip class="small-tag ppt-tag">
-                <span>.pptx</span>
-              </mat-chip>
-              <mat-chip class="small-tag xls-tag">
-                <span>.xlsx</span>
+              <mat-chip class="axis-tag">
+                <span *ngIf="!isMobile">Eje: </span>
+                <span>{{ post.axis.name }}</span>
               </mat-chip>
             </mat-chip-list>
-
-            <div class="doc-types-text">
-              <mat-icon>description</mat-icon>
-              <span *ngIf="isMobile">4</span>
-              <span *ngIf="!isMobile">4 Documentos</span>
+          </div>
+        </div>
+  
+        <mat-card-footer class="card-footer">
+          <div class="reaction-info">
+            <div>
+              <mat-icon>favorite</mat-icon>
+              <span>{{ post.likes }} Me gusta</span>
+            </div>
+            <div>
+              <mat-icon>download</mat-icon>
+              <span>{{ post.downloads }} Descargas</span>
             </div>
           </div>
 
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio omnis doloremque reprehenderit modi odio quam, illo officiis deserunt, sapiente vel cum labore deleniti minima? Rem ducimus nostrum reprehenderit odio veniam.</div>
-
-          <mat-chip-list class="tags">
-            <mat-chip class="academic-level-tag">
-              <span *ngIf="!isMobile">Nivel académico: </span>
-              <span>3ro básico</span>
-            </mat-chip>
-            <mat-chip class="subject-tag">
-              <span *ngIf="!isMobile">Asignatura: </span>
-              <span>Matemática</span>
-            </mat-chip>
-            <mat-chip class="axis-tag">
-              <span *ngIf="!isMobile">Eje: </span>
-              <span>Geometría</span>
-            </mat-chip>
-          </mat-chip-list>
-        </div>
-      </div>
-
-      <mat-card-footer class="card-footer">
-        <div class="reaction-info">
-          <div>
-            <mat-icon>favorite</mat-icon>
-            <span>21 Me gusta</span>
-          </div>
-          <div>
-            <mat-icon>download</mat-icon>
-            <span>5 Descargas</span>
-          </div>
-        </div>
-        <mat-icon>favorite_outline</mat-icon>
-      </mat-card-footer>
-    </mat-card>
+          <!-- TODO: Add isLiked in request to know if user already likes a post -->
+          <mat-icon>favorite_outline</mat-icon>
+        </mat-card-footer>
+      </mat-card>
+    </ng-container>
     
-    <mat-card class="card">
-      <div class="card-body">
-        <!-- <img src="/assets/images/doc-test.jpg" alt="document-image" class="card-image" *ngIf="!isMobile"> -->
-        <img src="/assets/images/ppt-test.jpg" alt="document-image" class="card-image" *ngIf="!isMobile">
-        <div class="card-content">
-          <!-- <img src="/assets/images/doc-test.jpg" alt="document-image" class="card-image" *ngIf="isMobile"> -->
-          <img src="/assets/images/ppt-test.jpg" alt="document-image" class="card-image" *ngIf="isMobile">
-          <mat-card-subtitle>Mariela bustamante - hace 2 semanas</mat-card-subtitle>
-          <mat-card-title>Planificacion de ejemplo</mat-card-title>
-
-          <div class="doc-types">
-            <mat-chip-list class="tags">
-              <mat-chip class="small-tag pdf-tag">
-                <span>.pdf</span>
-              </mat-chip>
-              <mat-chip class="small-tag doc-tag">
-                <span>.docx</span>
-              </mat-chip>
-              <mat-chip class="small-tag ppt-tag">
-                <span>.pptx</span>
-              </mat-chip>
-              <mat-chip class="small-tag xls-tag">
-                <span>.xlsx</span>
-              </mat-chip>
-            </mat-chip-list>
-
-            <div class="doc-types-text">
-              <mat-icon>description</mat-icon>
-              <span *ngIf="isMobile">4</span>
-              <span *ngIf="!isMobile">4 Documentos</span>
-            </div>
-          </div>
-
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio omnis doloremque reprehenderit modi odio quam, illo officiis deserunt, sapiente vel cum labore deleniti minima? Rem ducimus nostrum reprehenderit odio veniam.</div>
-
-          <mat-chip-list class="tags">
-            <mat-chip class="academic-level-tag">
-              <span *ngIf="!isMobile">Nivel académico: </span>
-              <span>3ro básico</span>
-            </mat-chip>
-            <mat-chip class="subject-tag">
-              <span *ngIf="!isMobile">Asignatura: </span>
-              <span>Matemática</span>
-            </mat-chip>
-            <mat-chip class="axis-tag">
-              <span *ngIf="!isMobile">Eje: </span>
-              <span>Geometría</span>
-            </mat-chip>
-          </mat-chip-list>
-        </div>
-      </div>
-
-      <mat-card-footer class="card-footer">
-        <div class="reaction-info">
-          <div>
-            <mat-icon>favorite</mat-icon>
-            <span>21 Me gusta</span>
-          </div>
-          <div>
-            <mat-icon>download</mat-icon>
-            <span>5 Descargas</span>
-          </div>
-        </div>
-        <mat-icon>favorite_outline</mat-icon>
-      </mat-card-footer>
-    </mat-card>
   </div>
 
   <!-- Bottom pagination -->
