--- a/src/app/features/homepage/components/results/results.component.scss
+++ b/src/app/features/homepage/components/results/results.component.scss
@@ -32,6 +32,13 @@
         border-radius: 20px;
         font-weight: 600;
     }
+    /* clears the ‘X’ from Chrome
+    *  from: https://medium.com/@rion.mrk/how-to-remove-x-icon-from-search-input-field-or-input-type-search-db3c808405fb
+    */
+    input[type="search"]::-webkit-search-decoration,
+    input[type="search"]::-webkit-search-cancel-button,
+    input[type="search"]::-webkit-search-results-button,
+    input[type="search"]::-webkit-search-results-decoration { display: none; }
 
     button {
         position: absolute;
@@ -106,10 +113,17 @@
     gap: 1rem;
 }
 
-.card-image {
-    max-height: 16rem; // desk
-    width: 100%; // mobile
-    // max-height: 12rem; // mobile
+.card-image-desktop {
+    max-height: 16rem;
+    width: 100%;
+    
+    object-fit: cover;
+    object-position: top;
+}
+
+.card-image-mobile {
+    width: 100%;
+    max-height: 12rem;
     
     object-fit: cover;
     object-position: top;
