--- a/src/app/features/homepage/components/results/results.component.html
+++ b/src/app/features/homepage/components/results/results.component.html
@@ -117,8 +117,8 @@
   
               <div class="doc-types-text">
                 <mat-icon>description</mat-icon>
-                <span *ngIf="isMobile">{{ (post.suporting_material|stringToArray).length + 1 }}</span>
-                <span *ngIf="!isMobile">{{ (post.suporting_material|stringToArray).length + 1 }} Documentos</span>
+                <span *ngIf="isMobile">{{ post.suporting_material?.length ?? 0 + 1 }}</span>
+                <span *ngIf="!isMobile">{{ post.suporting_material?.length ?? 0 + 1 }} Documentos</span>
               </div>
             </div>
   
@@ -156,7 +156,9 @@
           </div>
 
           <!-- TODO: Add isLiked in request to know if user already likes a post -->
-          <mat-icon>favorite_outline</mat-icon>
+          <button mat-icon-button (click)="toggleLike()">
+            <mat-icon>favorite_outline</mat-icon>
+          </button>
         </mat-card-footer>
       </mat-card>
     </ng-container>
