--- a/src/app/features/homepage/components/results/results.component.scss
+++ b/src/app/features/homepage/components/results/results.component.scss
@@ -4,10 +4,9 @@
     background-size: contain;
     // background-attachment: fixed;
 
-    padding: 59px 1rem 1rem 1rem;
+    padding: 4rem 1rem 1rem 1rem;
     
-    // TODO: Fix navbar height to knwo how much height needs root
-    // min-height: 100%;
+    min-height: calc(100% - 4rem - 1rem); // 4rem = navbar height
 }
 
 .search-and-filters {
@@ -29,7 +28,7 @@
     input {
         width: 100%;
 
-        padding: 0.5em 1em;
+        padding: 0.5em 1em 0.5em 2.5em;
         border: 1px solid rgba($color: #000000, $alpha: 0.2);
 
         border-radius: 20px;
@@ -61,6 +60,16 @@
             height: 100%;
             color: var(--dark-text);
         }
+    }
+
+    .search-icon {
+        position: absolute;
+        left: 0.5rem;
+        top: 0;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
 
@@ -103,7 +112,7 @@
 }
 
 .posts {
-    margin: 1rem 0;
+    margin: 1rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -113,6 +122,7 @@
 // Card style
 .card {
     max-width: 62.5rem;
+    width: 100%;
 }
 
 .card-body {
@@ -120,8 +130,13 @@
     gap: 1rem;
 }
 
+.card-content {
+    width: 100%;
+}
+
 .card-image-desktop {
     max-height: 16rem;
+    max-width: 25rem;
     width: 100%;
     
     object-fit: cover;
@@ -129,8 +144,8 @@
 }
 
 .card-image-mobile {
-    width: 100%;
     max-height: 12rem;
+    width: 100%;
     
     object-fit: cover;
     object-position: top;
