feat(detail): post detail layout desktop

--- a/src/assets/styles/_index.scss
+++ b/src/assets/styles/_index.scss
@@ -2,6 +2,7 @@
 @import './design/colors';
 @import './helpers/display';
 @import './helpers/misc';
+@import './helpers/box-model';
 
 // Typography
 // * {
