--- a/src/assets/styles/helpers/_display.scss
+++ b/src/assets/styles/helpers/_display.scss
@@ -1,29 +1,29 @@
 // START flex
-// .flex,
-// .flex_wrap,
-// .flex_end,
-// .flex_column,
-// .flex_column_start,
-// .flex_column_end,
-// .flex_center,
-// .flex_between,
-// .flex_between_center,
-// .flex_start_center,
-// .flex_end_center,
-// .flex_justify_end,
-// .flex_justify_center,
-// .flex_center_center,
-// .flex_start {
-//   display: flex;
-// }
+.flex,
+.flex_wrap,
+.flex_end,
+.flex_column,
+.flex_column_start,
+.flex_column_end,
+.flex_center,
+.flex_between,
+.flex_between_center,
+.flex_start_center,
+.flex_end_center,
+.flex_justify_end,
+.flex_justify_center,
+.flex_center_center,
+.flex_start {
+  display: flex;
+}
 
 .flex_wrap {
   flex-wrap: wrap;
 }
 
-// .flex_start {
-//   align-items: flex-start;
-// }
+.flex_start {
+  align-items: flex-start;
+}
 
 // .flex_center {
 //     align-items: center;
@@ -51,15 +51,15 @@
   justify-content: space-between;
 }
 
-// .flex_between_center {
-//   justify-content: space-between;
-//   align-items: center;
-// }
+.flex_between_center {
+  justify-content: space-between;
+  align-items: center;
+}
 
-// .flex_start_center {
-//   justify-content: flex-start;
-//   align-items: center;
-// }
+.flex_start_center {
+  justify-content: flex-start;
+  align-items: center;
+}
 
 // .flex_end_center {
 //   justify-content: flex-end;
@@ -98,4 +98,8 @@
 // Start others
 .gap-1 {
   gap: 1rem;
+}
+
+.gap-05 {
+  gap: 0.5rem;
 }
